<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eipscanner</name>
  <version>1.1.0</version>
  <description>Free implementation of Ethernet/IP scanner in C++.</description>
  <maintainer email="elias@tractonomy.com">Elias De Coninck</maintainer>
  <license>MIT</license>
  <author>Aleksey Timin</author>
  <author>Adam Roth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>  
</package>